--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,7 +1,7 @@
-@media screen and (max-width:500px)
+@media screen and (max-width: 500px)
 {
   nav{
-    display: flex;
+    display: grid;
     flex-direction: column;
   }
   .card{
@@ -18,6 +18,13 @@
     flex-direction: column;
     padding: 1rem;
     box-shadow: none;
+  }
+  img{
+    width: 30%;
+    height: auto;
+  }
+  span{
+    font-size: 2rem;
   }
 
 }
