--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,7 +1,7 @@
 @media screen and (max-width: 500px)
 {
   nav{
-    display: grid;
+    display: flex;
     flex-direction: column;
   }
   .card{
@@ -28,3 +28,5 @@
   }
 
 }
+
+
