--- a/styles/base.css
+++ b/styles/base.css
@@ -67,9 +67,16 @@ main{
     grid-column: 1/3;
 }
 footer{
+  font-family: "Ubuntu", sans-serif, serif;
     text-align: center;
     background-color: #006eb6;
     padding: 0.5rem;
     margin-top: 1.5rem;
 
+}
+#copyright{
+  color: white ;
+}
+#lastModified{
+  color: yellow;
 }
