--- a/styles/base.css
+++ b/styles/base.css
@@ -16,16 +16,16 @@ img {
   display: block;
   max-width: 100%;
   max-height: 100%;
-  margin:0;
+  margin: 0;
 }
-span{
-    padding: 2rem;
-    font-size: 3rem;
-    color:white;
-    font-family:"Ubuntu", sans-serif, serif;;
+span {
+  padding: 2rem;
+  font-size: 3rem;
+  color: white;
+  font-family: "Ubuntu", sans-serif, serif;
 }
-#home{
-    background-color: brown;
+#home {
+  background-color: brown;
 }
 nav {
   display: flex;
@@ -42,45 +42,43 @@ nav a:hover {
   font-family: "Ubuntu", sans-serif, serif;
   color: yellow;
   transform: scale(1.5);
-  
 }
 
-main{
-    padding: 0 4rem 0 4rem;
-    display:grid;
-    grid-gap: 2rem;
-    grid-template-columns: 0.8fr auto;
+main {
+  padding: 0 4rem 0 4rem;
+  display: grid;
+  grid-gap: 2rem;
+  grid-template-columns: 0.8fr auto;
 }
-.card{
-    background-color:white;
-    box-shadow: 2px 2px 10px 1px #000000;
+.card {
+  background-color: white;
+  box-shadow: 2px 2px 10px 1px #000000;
 }
-.card h2{
-    background-color: #006eb6;
-    padding: 1rem;
-    text-align: center;
-    color: aliceblue;
-    margin-top: -1px;
+.card h2 {
+  background-color: #006eb6;
+  padding: 1rem;
+  text-align: center;
+  color: aliceblue;
+  margin-top: -1px;
 }
-ul li a{
+ul li a {
   text-decoration: none;
 }
 
-.title{
-    border-bottom: 1px solid #000000;
-    grid-column: 1/3;
+.title {
+  border-bottom: 1px solid #000000;
+  grid-column: 1/3;
 }
-footer{
+footer {
   font-family: "Ubuntu", sans-serif, serif;
-    text-align: center;
-    background-color: #006eb6;
-    padding: 0.5rem;
-    margin-top: 1.5rem;
-
+  text-align: center;
+  background-color: #006eb6;
+  padding: 0.5rem;
+  margin-top: 1.5rem;
 }
-#copyright{
-  color: white ;
+#copyright {
+  color: white;
 }
-#lastModified{
+#lastModified {
   color: yellow;
 }
