--- a/styles/base.css
+++ b/styles/base.css
@@ -14,45 +14,45 @@ img {
   border-radius: 5%;
   box-shadow: 5px 5px 10px #000000;
   display: block;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 25%;
+  height: auto;
   margin: 0;
 }
 span {
   padding: 2rem;
-  font-size: 3rem;
+  font-size: 2rem;
   color: white;
   font-family: "Ubuntu", sans-serif, serif;
 }
-#home {
-  background-color: brown;
-}
+
 nav {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  text-align: center;
   background-color: black;
 }
 nav a {
+  font-family: "Ubuntu", sans-serif, serif;
   color: azure;
-  transition: transfrom 0.5s;
+  text-align: center;
   text-decoration: none;
   padding: 1rem;
 }
 nav a:hover {
-  font-family: "Ubuntu", sans-serif, serif;
+  text-decoration: underline;
   color: yellow;
-  transform: scale(1.5);
 }
 
 main {
-  padding: 0 4rem 0 4rem;
-  display: grid;
-  grid-gap: 2rem;
-  grid-template-columns: 0.8fr auto;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  box-shadow: none;
 }
 .card {
   background-color: white;
-  box-shadow: 2px 2px 10px 1px #000000;
+  border: 1px solid grey;
+  margin-top: 10px;
 }
 .card h2 {
   background-color: #006eb6;
@@ -66,8 +66,8 @@ ul li a {
 }
 
 .title {
-  border-bottom: 1px solid #000000;
-  grid-column: 1/3;
+  font-size: 1.1rem;
+  border-bottom: 1px solid black;
 }
 footer {
   font-family: "Ubuntu", sans-serif, serif;
