--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,33 +1,30 @@
-@media screen and (max-width: 500px) {
+@media screen and (min-width: 500px) {
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  span {
+    font-size: 3rem;
+  }
   nav {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+    flex-direction: row;
+    justify-content: space-evenly;
+    font-size: 1.3rem;
   }
   nav a:hover {
     color: yellow;
-    transform: scale(1);
-  }
-  .card {
-    box-shadow: none;
-    border-width: 0.5px;
-    border-style: solid;
-    border-color: black;
-  }
-  .title {
-    font-size: 1.1rem;
   }
   main {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    box-shadow: none;
+    display: grid;
+    padding: 0 4rem 0 4rem;
+    grid-template-columns: 0.8fr auto;
+    grid-gap: 1.5rem;
   }
-  img {
-    width: 30%;
-    height: auto;
-  }
-  span {
+  .title {
     font-size: 2rem;
+    grid-column: 1/3;
+  }
+  .card {
+    box-shadow: 1px 1px 10px 0px black;
   }
 }
