--- a/styles/base.css
+++ b/styles/base.css
@@ -1,18 +1,45 @@
+
+:root{
+  --byu-blue-color: #006eb6;
+  --white-color: white;
+  --black-color: #343434;
+  --yellow-color: yellow;
+  --gray-color: grey;
+  --purple-color: purple;}
+
+.dark-mode {
+  --byu-blue-color: black;
+  --white-color: white;
+  --black-color: #36454F;
+  --yellow-color: #AABD8C;
+  --gray-color: grey;
+  --purple-color: purple;
+}
+
 body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
 header {
-  background-color: #006eb6;
+  background-color: var(--byu-blue-color);
   padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0;
 }
+#mode {
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+	font-size: 3rem;
+	cursor: pointer;
+	font-size: 1.5rem;
+}
 img {
   border-radius: 5%;
-  box-shadow: 5px 5px 10px #000000;
+  box-shadow: 5px 5px 10px var(--black-color);
   display: block;
   max-width: 25%;
   height: auto;
@@ -21,7 +48,7 @@ img {
 span {
   padding: 2rem;
   font-size: 2rem;
-  color: white;
+  color: var(--white-color);
   font-family: "Ubuntu", sans-serif, serif;
 }
 
@@ -29,9 +56,9 @@ span {
   font-size: 1.5rem;
   border: 0;
   background: none;
-  color: white;
+  color: var(--white-color);
   position: absolute;
-  right: 1rem;
+  right: 3rem;
   top: 1rem;
 }
 #menu::before {
@@ -45,19 +72,19 @@ span {
   flex-direction: column;
   text-align: center;
   list-style: none;
-  background-color: black;
+  background-color: var(--black-color);
 }
 .navigation a {
   display: none;
   font-family: "Ubuntu", sans-serif, serif;
-  color: azure;
+  color:var(--white-color);
   text-align: center;
   text-decoration: none;
   padding: 1rem;
 }
 .navigation a:hover {
   text-decoration: underline;
-  color: yellow;
+  color: var(--yellow-color);
 }
 /* when the button is clicked - the open class is toggled (added/removed) */
 .open a {
@@ -74,15 +101,15 @@ ul {
   list-style: none;
 }
 .card {
-  background-color: white;
-  border: 1px solid grey;
+  background-color: var(--white-color);
+  border: 1px solid var(--gray-color);
   margin-top: 10px;
 }
 .card h2 {
-  background-color: #006eb6;
+  background-color: var(--byu-blue-color);
   padding: 1rem;
   text-align: center;
-  color: aliceblue;
+  color: var(--white-color);
   margin-top: -1px;
 }
 ul li a {
@@ -90,27 +117,27 @@ ul li a {
 }
 
 main a {
-  color: #006eb6;
+  color: var(--byu-blue-color);
 }
 
 main a:hover {
-  color: rebeccapurple;
+  color: var(--purple-color);
   text-decoration: underline;
 }
 .title {
   font-size: 1.1rem;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid var(--black-color);
 }
 footer {
   font-family: "Ubuntu", sans-serif, serif;
   text-align: center;
-  background-color: #006eb6;
-  padding: 0.5rem;
+  background-color: var(--byu-blue-color);
+  padding: 1rem;
   margin-top: 1.5rem;
 }
 #copyright {
-  color: white;
+  color: var(--white-color);
 }
 #lastModified {
-  color: yellow;
+  color: var(--yellow-color);
 }
