--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -120,7 +120,7 @@ h1 {
   font-family: "Merienda", serif;
   font-size: 1.8rem;
   text-align: center;
-  padding: 1rem;
+  padding: 1rem 1rem 0 1rem;
 }
 h2 {
   color: var(--primary-color);
