--- a/styles/larger.css
+++ b/styles/larger.css
@@ -26,6 +26,9 @@
     grid-template-columns: 0.8fr auto;
     grid-gap: 1.5rem;
   }
+  .map {
+    grid-column: 1/3;
+    max-width: 1200px; /* Adjust max-width as needed */}
   .title {
     font-size: 2rem;
     grid-column: 1/3;
