--- a/styles/base.css
+++ b/styles/base.css
@@ -104,7 +104,6 @@ main {
   display: flex;
   flex-direction: column;
   box-shadow: none;
-  text-align: center;
 }
 ul {
   list-style: none;
@@ -140,9 +139,10 @@ main a:hover {
 .map {
   position: relative;
   width: 100%;
+  height: 150px;
   max-width: 600px; /* Adjust max-width as needed */
   overflow: hidden;
-  padding-top: 56.25%; /* 16:9 aspect ratio (height/width * 100) */
+  padding-top: 25%; /* 16:9 aspect ratio (height/width * 100) */
 }
 .map iframe {
   position: absolute;
@@ -150,7 +150,12 @@ main a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  border: none; /* Remove iframe border */
+  border: none;
+}
+.visits,.label {
+	color: var(--black-color);
+	font-weight: bolder;
+	font-size: larger;
 }
 
 footer {
