--- a/styles/larger.css
+++ b/styles/larger.css
@@ -28,7 +28,9 @@
   }
   .map {
     grid-column: 1/3;
-    max-width: 1200px; /* Adjust max-width as needed */}
+    max-width: 2500px;
+    height: auto;
+  }
   .title {
     font-size: 2rem;
     grid-column: 1/3;
