--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -198,3 +198,20 @@ h3 {
   background-color: var(--accent1-color);
   color: var(--secondary-color);
 }
+
+
+
+.sidebar {
+  width: 100%;
+  font-size: larger;
+  border: 1px solid var(--accent2-color);
+  background-color: var(--accent2-color);
+
+  padding: 10px 5px 10px 0;
+  text-align: center;
+}
+
+.weatherwidget {
+  width: 100%;
+  padding-top: 1rem;
+}
