--- a/chamber/styles/join_larger.css
+++ b/chamber/styles/join_larger.css
@@ -5,7 +5,7 @@
     }
     main{
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 0.5fr;
       }
     .navigation {
       flex-direction: row;
@@ -20,12 +20,8 @@
     }
   
 /*FOR JOIN.HTML*/
-.wf2{
-    grid-column: 1/2;
-}
 .wf3  legend{
     font-size:0.5rem;
-    grid-column: 2/3;
 }
 .wf2 input[type="text"],
 .wf2 input[type="password"],
@@ -34,7 +30,7 @@
     max-width: 40%;
 }
 .wf2 #description{
-    width: 70rem;
+    width: 100%;
     height: 15rem;
 }
 
