--- a/chamber/styles/join_larger.css
+++ b/chamber/styles/join_larger.css
@@ -26,7 +26,7 @@
 .wf2 input[type="text"],
 .wf2 input[type="password"],
 .wf2 input[type="email"], 
-.wf2 input[type="telephone"] {
+.wf2 input[type="tel"] {
     max-width: 40%;
 }
 .wf2 #description{
