--- a/week05/styles/prophets.css
+++ b/week05/styles/prophets.css
@@ -14,15 +14,10 @@ h1,h2 {
   p {
     margin: 5px;
   }
-  
-  main {
-    margin-left: 2rem;
-  }
 
 #cards{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    box-shadow: 5px 0 30px #000000;
   }
   section {
     margin:0.5rem;
@@ -32,6 +27,7 @@ h1,h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-shadow: 10px 4px 10px #555;
   }
 
   img {
