--- a/styles/base.css
+++ b/styles/base.css
@@ -162,6 +162,9 @@ main a:hover {
 	font-weight: bolder;
 	font-size: larger;
 }
+.visits{
+  margin-left: -3rem;
+}
 
 footer {
   font-family: "Ubuntu", sans-serif, serif;
@@ -175,4 +178,19 @@ footer {
 }
 #lastModified {
   color: var(--yellow-color);
+}
+/*Weather*/
+.weather-container {
+  display: flex; /* Use flexbox to align items horizontally */
+  align-items: center; /* Align items vertically */
+}
+figcaption{
+  font-size: 1.5rem;
+  color: var(--byu-blue-color);
+  margin-left: -4rem;
+}
+#current-temp{
+  font-size: 2rem;
+  color: var(--purple-color);
+  margin-left: -2rem;
 }
