--- a/styles/larger.css
+++ b/styles/larger.css
@@ -3,9 +3,12 @@
     max-width: 100%;
     max-height: 100%;
   }
-  span {
+#name{
     font-size: 3rem;
   }
+span{
+    font-size: 1.2rem;
+}
   #menu {
     display: none; /* hide hamburger button */
   }
@@ -35,7 +38,7 @@
     font-size: 2rem;
     grid-column: 1/3;
   }
-  .card {
+  .card1, .card2 {
     box-shadow: 1px 1px 10px 0px var(--black-color);
   }
 }
