--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -4,6 +4,7 @@
     justify-content: space-evenly;
     font-size: 1.3rem;
     padding: 5rem 0 0 0;
+    margin-left: 2rem;
   }
   .navigation a {
     display: block;
@@ -13,7 +14,7 @@
     color: var(--yellow-color);
   }
   .logo {
-    max-width: 50%;
+    max-width: 100%;
     text-align: center;
     margin-top: 2rem;
     margin-left: 40%;
@@ -47,10 +48,7 @@
     grid-column: 1/5;
     padding: 0 10rem 2rem 10rem;
   }
-  #owner {
-    grid-column: 1/5;
-    padding-left: 30%;
-  }
+
 
   h1,
   h2 {
@@ -80,5 +78,12 @@
   #join_bas,
   #join_prem {
     font-size: 2rem;
+  }
+  #owner {
+    grid-column: 1/5;
+  }
+  #copyright,#lastModified{
+    font-size: 1.5rem;
+    text-align: center;
   }
 }
