--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -87,3 +87,25 @@
     text-align: center;
   }
 }
+
+/*Weather*/
+figcaption{
+  font-size: 1.5rem;
+  margin-left: -.5rem;
+}
+#current-temp{
+  font-size: 1.5rem;
+  margin-left: 1rem;
+}
+
+#weather-title, #forecast-title{
+  font-size: 2rem;
+  font-weight: bolder;
+}
+
+/*advertise*/
+.spotlightAds{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap:1rem;
+}
